--- a/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/Forme/frmHelpDodajLijek.resx
+++ b/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/Forme/frmHelpDodajLijek.resx
@@ -117,8 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="slika_upitnik" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\slika_upitnik.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="txtOpis.Text" xml:space="preserve">
+    <value>Kako biste dodali željeni lijek u narudžbenicu prilikom unosa narudžbe potrebno je da odaberete željeni lijek iz tablice i pritisnete Dodaj. Ako želi pretražiti tablicu lijekova, unesite naziv želkjenog lijeka u pretraživač koji se nalazi iznad tablice. Ako se želite vratiti na prethodnu formu pritisnite tipku Natrag.</value>
   </data>
 </root>
